# Natural-Language-to-KQL

./: .gitignore  README.md
kql-expert-chatbot/: env.template  pyproject.toml
kql-expert-chatbot/app/: kql_expert_bot.py  main.py
kql-expert-chatbot/tests/: tests_parse_llm_output.py
